--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <p>If disposal is necessary, will degrade without releasing harmful toxins.</p>
                 </div>
             </div>
-            <div class="disposal-video">
+            <div class="responsive-video">
                 <div class="video-container">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/Qyu-fZ8BOnI?si=tFVOagZ2oP8z8mw6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
@@ -325,7 +325,7 @@
           <i class="fas fa-phone-alt"></i>
           <div>
             <span>Sales Inquiries</span>
-            <a href="tel:+18005551234">+1 (800) 555-1234</a>
+            <a href="tel:+628226757864">+62 822-6765-7864</a>
           </div>
         </div>
         <div class="contact-method">
